# platfoxbot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: config.rs  main.rs  telegram.rs
src/sources/: base.rs  mod.rs  twitter.rs
