[package]
name = "platfoxbot"
description = "(Platinum Foxes Bot) twitter to telegram image reposter"
version = "2.2.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
toml = "0.5"
reqwest = { version = "0.11", features = [ "blocking" ] }
clap = { version = "3", features = [ "derive" ] }
tokio = { version = "1", features = [ "rt", "macros" ] }
futures = "0.3"
